--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,4 +7,8 @@ subtitle: eurekas and musings abound
 
 import SiteIndex from "../components/SiteIndex.astro";
 
+<button class="btn btn-primary">Button</button>
+<button class="btn btn-secondary">Button</button>
+<button class="btn btn-accent">Button</button>
+
 <SiteIndex />
